Fix body overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@ body {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-variation-settings: "slnt" 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 p {
